--- a/src/app.html
+++ b/src/app.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
+		<link rel="icon" href="%sveltekit.assets%/logomeilleurqualité.png" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<title>Jeunesse Volontaire</title>
 		%sveltekit.head%
 	</head>
 	<body data-sveltekit-preload-data="hover">
