made progress in navbar and footer

--- a/src/app.html
+++ b/src/app.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="fr" data-theme="emerald">
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="%sveltekit.assets%/logomeilleurqualité.png" />
@@ -7,7 +7,7 @@
 		<title>Jeunesse Volontaire</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover">
+	<body data-sveltekit-preload-data="hover" class="flex flex-col justify-between min-h-screen">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
