--- a/src/app.html
+++ b/src/app.html
@@ -7,7 +7,11 @@
 		<title>Jeunesse Volontaire</title>
 		%sveltekit.head%
 	</head>
-	<body data-sveltekit-preload-data="hover" class="flex flex-col justify-between min-h-screen">
+	<body
+		data-sveltekit-preload-data="hover"
+		id="root"
+		class="flex flex-col justify-between min-h-screen"
+	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
