--- a/src/app.html
+++ b/src/app.html
@@ -10,7 +10,7 @@
 	<body
 		data-sveltekit-preload-data="hover"
 		id="root"
-		class="flex flex-col justify-between min-h-screen"
+		class="flex flex-col justify-between min-h-screen bg-emerald-50 bg-opacity-30"
 	>
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
