add Statcounter tracking code for web analytics

--- a/src/app.html
+++ b/src/app.html
@@ -13,5 +13,27 @@
 		class="flex flex-col justify-between min-h-screen bg-emerald-50 bg-opacity-30"
 	>
 		<div style="display: contents">%sveltekit.body%</div>
+		<!-- Begin Statcounter code for JV website (for web analytics) -->
+		<script type="text/javascript">
+			var sc_project = 13076518;
+			var sc_invisible = 1;
+			var sc_security = '211cb404';
+		</script>
+		<script
+			type="text/javascript"
+			src="https://www.statcounter.com/counter/counter.js"
+			async
+		></script>
+		<noscript
+			><div class="statcounter">
+				<a title="site stats" href="https://statcounter.com/" target="_blank"
+					><img
+						class="statcounter"
+						src="https://c.statcounter.com/13076518/0/211cb404/1/"
+						alt="site stats"
+						referrerpolicy="no-referrer-when-downgrade"
+				/></a></div
+		></noscript>
+		<!-- End of Statcounter Code -->
 	</body>
 </html>
