add global meta tags for better SEO

--- a/src/app.html
+++ b/src/app.html
@@ -2,9 +2,20 @@
 <html lang="fr" data-theme="emerald">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/logomeilleurqualité.png" />
+		<link rel="icon" href="%sveltekit.assets%/favicon.ico" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<title>Jeunesse Volontaire</title>
+		<meta
+			name="description"
+			content="Jeunesse Volontaire est une association dédiée à la protection de l'environnement, à la solidarité et à la coopération. Groupe de Jeunes bénévoles, engagé dans l'action sociale et la protection de l’environnement. Créée en 2010, elle œuvre pour préserver la biodiversité et les écosystèmes."
+		/>
+		<meta property="og:title" content="Jeunesse Volontaire" />
+		<meta property="og:type" content="website" />
+		<meta property="og:url" content="https://jvdz.netlify.app" />
+		<meta property="og:image" content="https://jvdz.netlify.app/logomeilleurqualité.png" />
+		<meta name="twitter:card" content="summary_large_image" />
+		<meta name="twitter:image" content="https://jvdz.netlify.app/logomeilleurqualité.png" />
+		<meta name="author" content="Jeunesse Volontaire" />
 		%sveltekit.head%
 	</head>
 	<body
