--- a/src/app.html
+++ b/src/app.html
@@ -9,6 +9,10 @@
 			name="description"
 			content="Jeunesse Volontaire est une association dédiée à la protection de l'environnement, à la solidarité et à la coopération. Groupe de Jeunes bénévoles, engagé dans l'action sociale et la protection de l’environnement. Créée en 2010, elle œuvre pour préserver la biodiversité et les écosystèmes."
 		/>
+		<meta
+			name="keywords"
+			content="Jeunesse Volontaire, JV, Sidi Bel Abbès, association, environnement, biodiversité, solidarité, protection de l'environnement, action sociale, Algérie"
+		/>
 		<meta property="og:title" content="Jeunesse Volontaire" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://jvdz.netlify.app" />
