add sitemap for better SEO

--- a/src/app.html
+++ b/src/app.html
@@ -13,6 +13,7 @@
 			name="keywords"
 			content="Jeunesse Volontaire, JV, Sidi Bel Abbès, association, environnement, biodiversité, solidarité, protection de l'environnement, action sociale, Algérie"
 		/>
+		<link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 		<meta property="og:title" content="Jeunesse Volontaire" />
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://jvdz.netlify.app" />
