update all occurances of jvdz.netlify.app with the new domain name

--- a/src/app.html
+++ b/src/app.html
@@ -16,10 +16,10 @@
 		<link rel="sitemap" type="application/xml" href="/sitemap.xml" />
 		<meta property="og:title" content="Jeunesse Volontaire" />
 		<meta property="og:type" content="website" />
-		<meta property="og:url" content="https://jvdz.netlify.app" />
-		<meta property="og:image" content="https://jvdz.netlify.app/logomeilleurqualité.png" />
+		<meta property="og:url" content="https://jeunessevolontairesba.dz" />
+		<meta property="og:image" content="https://jeunessevolontairesba.dz/logomeilleurqualité.png" />
 		<meta name="twitter:card" content="summary_large_image" />
-		<meta name="twitter:image" content="https://jvdz.netlify.app/logomeilleurqualité.png" />
+		<meta name="twitter:image" content="https://jeunessevolontairesba.dz/logomeilleurqualité.png" />
 		<meta name="author" content="Jeunesse Volontaire" />
 		%sveltekit.head%
 	</head>
